--- a/_sass/global.scss
+++ b/_sass/global.scss
@@ -104,6 +104,10 @@ body {
   .acc-header.button, .slider-hdr.button {
     font-size: 14px;
   }
+  .heading.menu-link {
+    font-size: 40px;
+    line-height: 42px;
+  }
 }
 
 .sub-heading {
