removed the margin bottom for the scroll to top btn

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -496,7 +496,7 @@
         z-index: 100;
 
         @media (min-width: 767.98px){
-            margin-bottom: 198px;
+            // margin-bottom: 198px;
         }
     }
 
@@ -589,7 +589,7 @@
             z-index: 100;
 
             @media (min-width: 767.98px){
-                margin-bottom: 198px;
+                // margin-bottom: 198px;
             }
         }
 
@@ -1394,7 +1394,8 @@
                 padding-top: 30px;
             }
         }
-
+                                                                
+    
         @media (min-width:$mobile_screen) {
             gap: 80px;
 
