--- a/_includes/soundscape.html
+++ b/_includes/soundscape.html
@@ -80,4 +80,37 @@
   <div class="scroll-to-top" id="scroll-top">
     <img src="/assets/images/icons/arrow-up.svg" alt="arrow-up" />
   </div>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const scrollToTopButton = document.getElementById('scroll-top');
+
+      window.addEventListener('scroll', function () {
+        if (window.scrollY > window.innerHeight / 2) {
+          scrollToTopButton.classList.add('visible');
+        } else {
+          scrollToTopButton.classList.remove('visible');
+        }
+
+        const scrollBottom = document.documentElement.scrollHeight - window.innerHeight - window.scrollY;
+
+        if (scrollBottom < 198) {
+          scrollToTopButton.style.marginBottom = `${198 - scrollBottom}px`;
+        } else {
+          scrollToTopButton.style.marginBottom = '0';
+        }
+
+        if (window.innerWidth < 768) {
+          scrollToTopButton.style.marginBottom = '0';
+        }
+      });
+
+      scrollToTopButton.addEventListener('click', function () {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth'
+        });
+      });
+    });
+
+  </script>
 </div>
