Homepage Acc - captions added

--- a/_includes/index.html
+++ b/_includes/index.html
@@ -69,7 +69,10 @@
     <div id="{{ item.id }}" class="acc-content">
       <div class="container">
         <div class="acc-home">
+          <figure>
           <img src="{{ item.image }}" alt="" />
+          <figcaption class="caption">{{ item.caption }}</figcaption>
+          </figure>
           <p class="desc">{{ item.description }}</p>
         </div>
       </div>
