--- a/_includes/about.html
+++ b/_includes/about.html
@@ -35,7 +35,7 @@
       {% assign lang = page.lang %} {% assign staff =
       site.data.team[lang].alumni %}
       <div class="accordion">
-        <button class="acc-header bordered button" data-target="alumni">
+        <button class="acc-header button" data-target="alumni">
           <span class="label"> {{staff.title}} </span>
           <span class="icon"></span>
         </button>
@@ -89,7 +89,7 @@
               </div>
             </div>
           </div>
-          
+
         </div>
       </div>
     </div>
