--- a/_includes/index.html
+++ b/_includes/index.html
@@ -1,6 +1,6 @@
 <div id="banner">
   <div class="logo-text">
-    <img src="/assets/images/logos/typo.png" alt="logo" />
+     <img src="{{ site.data.locales[page.lang].index.logo }}" alt="Logo" />
   </div>
   <div class="slider">
     <div class="slider1" id="slider1">
